# apple-harvest

./: README.md  requirements.txt
harvest/: CMakeLists.txt  package.xml
harvest/launch/: launch_gripper.launch.py  launch_lab_demo.py  launch_vision.launch.py  launch_vision_templating.launch.py
harvest/scripts/: apple_image_masking.py  apple_reachability_rviz.py  launch_param_test.py  orchard_templating.py  orchard_templating_linear_approach_test.py  process_results.py  record.py  start_harvest.py  start_harvest_demo.py  start_harvest_just_gripper.py  visual_servo_test.py
harvest/tests/: apple_prediction_test.py
harvest_control/: CMakeLists.txt  package.xml
harvest_control/launch/: arm_control.launch.py  arm_control_templating.launch.py
harvest_control/resource/: reachable_paths.npy  reachable_voxel_centers.csv  reachable_voxel_centers_fine.csv  tree_wire_mask.json  voxel_ik_data.csv  voxel_ik_data_fine.csv
harvest_control/resource/urdf/: v_trellis_template.urdf  v_trellis_template.xacro
harvest_control/scripts/: alejo_file_test.py  coordinate_to_trajectory.py  coordinate_to_trajectory_client.py  event_detector.py  force_filter.py  generate_trellis_collision_obj.py  get_manual_apple_locations.py  heuristic_controller.py  linear_controller.py  local_planner.py  pose_listener.py  pressure_averager.py  pull_twist_controller.py  traj_gen.py  trellis_wire_scan.py  visual_servo.py
harvest_control/scripts/pyb_scripts/: load_objects.py  load_robot.py  pyb_utils.py
harvest_control/src/: event_detector.py  force_filter.py  generate_tree_collision_objects.cpp  generate_tree_collision_objects.hpp  generate_trellis_collision_obj.cpp  heuristic_controller.py  linear_controller.py  move_arm.cpp  move_arm_action_based.cpp  pointcloud_to_collision_obj.cpp  pressure_averager.py  pull_twist_controller.py
harvest_hardware/Universal_Robots_ROS2_Description/config/: initial_positions_marcus.yaml
harvest_hardware/Universal_Robots_ROS2_Description/rviz/: view_robot.rviz
harvest_hardware/Universal_Robots_ROS2_Driver/ur_controllers/include/ur_controllers/: scaled_joint_trajectory_controller.hpp
harvest_hardware/Universal_Robots_ROS2_Driver/ur_controllers/src/: scaled_joint_trajectory_controller.cpp
harvest_hardware/Universal_Robots_ROS2_Driver/ur_moveit_config/: package.xml
harvest_hardware/Universal_Robots_ROS2_Driver/ur_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  ur_servo.yaml
harvest_hardware/Universal_Robots_ROS2_Driver/ur_moveit_config/launch/: ur_moveit_custom_hw.launch.py
harvest_hardware/Universal_Robots_ROS2_Driver/ur_moveit_config/rviz/: view_robot.rviz
harvest_hardware/Universal_Robots_ROS2_Driver/ur_robot_driver/launch/: ur5e.launch.py  ur_control_custom_hw.launch.py
harvest_hardware/realsense-ros/realsense2_description/urdf/: _d435i.urdf.xacro
harvest_hardware/ur5e_custom_hardware/: package.xml  setup.cfg  setup.py
harvest_hardware/ur5e_custom_hardware/ur5e_custom_hardware/: gripper_palm_camera.py
harvest_hardware/ur5e_custom_hardware/urdf/: gimbal.urdf.xacro  gripper.urdf.xacro  ur_gripper.urdf.xacro
harvest_interfaces/: CMakeLists.txt  package.xml
harvest_interfaces/action/: EventDetection.action  SendTrajectory.action
harvest_interfaces/srv/: ApplePrediction.srv  CoordinateToTrajectory.srv  FinalApproachLinear.srv  GetGripperPose.srv  GraspApple.srv  MoveToPose.srv  RecordTopics.srv  SendTrajectory.srv  SetValue.srv  TextInRviz.srv  TrajectoryBetweenPoints.srv  VoxelGrid.srv  VoxelMask.srv
harvest_vision/: package.xml  setup.cfg  setup.py
harvest_vision/harvest_vision/: apple_prediction.py  apple_prediction_presaved_images.py  live_reconstruct.py  reconstruction.py  sphere_ransac.py  voxelize_scan.py
